Changelog
=========


2.2 (unreleased)
----------------

- Delegate: fix pointer on response to subtask.
  [jone]

- Delegate: do not inherit predecessor from parent to subtasks.
  [jone]

- Delegate: fix bug when there are no related documents.
  [jone]

- Task overview: display responsible of subtasks.
  [jone]

- Display workflow state icon for related tasks in task overview.
  [jone]

- Display issuer client in task overview.
  [jone]

- Reponse: support for referencing multiple added documents in one response.
  [jone]

- Implement task delegate wizard.
  Issue #1343 "Aufgabe Delegieren" Wizard
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1343
  [jone]

- Implement task accept wizard.
  Issue #1342 "Aufgabe akzeptieren" Wizard
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1342
  [jone]

- Moved the workflow guards checks in to a TaskTransitionController and added Tests.
  [phgross]


2.1 (2012-01-13)
----------------

- Adjust task configuration, added ftw.mail.mail to the allowed content types of tasks.
  Is Allready released in the Hotfix 2.0.2.
  [phgross]

- #1299 Spalte 'In Bearbeitung' hinzufügen bei Dokumentenauflistung in einer Aufgabe
  https://extranet.4teamwork.ch/projects/opengever-kanton-zug/sprint-backlog/1299/
  add new column 'checked_out' for the document tab in task-view
  [eschmutz]

- Single client setup: do not display the responsible_client in the task overview.
  [jone]

- Single client setup: hide responsible_client field if only one client is set up.
  [jone]


2.0.1 (2011-12-06)
------------------

- Fixed translation of task type "Forwarding".
  [lgraf]


2.0 (2011-11-17)
----------------

- Removed `linked` helper, now using the one from og.tabbedview.helpers
  [lgraf]

- Fixed related_items indexer for tasks: It used to return ALL relations,
  not just the ones from the context.
  Issue #1261 Fehlerhafte Assoziation von Dokument/Aufgaben